
== 6/10/2012

Initial release abstracted to be entirely independent from cascading-configuration.
Replaces cascading-configuration-inheritance and cascading-configuration-ancestors without any cascading-configuration dependencies.

== 6/11/2012

Added YARD docs.
Shortened :initialize_base_instance_for_include and :initialize_base_instance_for_extend parameters to remove reference to self, since self is already present as block receiver.

== 6/12/2012

Renamed :match_ancestor_searching_upward to :match_ancestor because ancestors are always found by searching upward.